# iidx-skin-maker

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.MD  build-windows.sh  core.h  main.cpp  message(2).txt  pch.h  run.sh  utils.cpp  utils.h  windows-toolchain.cmake
audio/: AudioHandler.cpp  AudioHandler.h  SD9File.cpp  SD9File.h  SoundFile.cpp  SoundFile.h
files/: CMakeLists.txt  Directory.cpp  Directory.h  FileHandler.cpp  FileHandler.h
gui/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  MainMenuBar.cpp  MainMenuBar.h
gui/Form/: ModLoopChanger.cpp  ModLoopChanger.h  NumberCallbackBox.cpp  NumberCallbackBox.h  TextCallbackBox.h
gui/Forms/: TextCallbackBox.cpp
gui/Panels/: EditPanel.cpp  EditPanel.h  FileFilters.cpp  FileFilters.h  FilePanel.cpp  FilePanel.h  FileSection.cpp  FileSection.h  OverrideEditor.cpp
gui/Popups/: ModSettingsPopup.cpp  ModSettingsPopup.h
mixins/: Serialisable.h
mod_manager/: CMakeLists.txt  Mod.cpp  Mod.h  ModManager.cpp  ModManager.h  ModObserver.cpp  ModObserver.h
mod_manager/Overrides/: Override.h  SD9Override.cpp  SD9Override.h
src/: CMakeLists.txt  core.h  main.cpp  pch.h  utils.cpp  utils.h
src/audio/: AudioHandler.cpp  AudioHandler.h  CMakeLists.txt  SD9File.cpp  SD9File.h  SoundFile.cpp  SoundFile.h
src/files/: CMakeLists.txt  Directory.cpp  Directory.h  FileHandler.cpp  FileHandler.h  IFSFile.cpp  IFSFile.h
src/gui/: CMakeLists.txt  MainFrame.cpp  MainFrame.h  MainMenuBar.cpp  MainMenuBar.h
src/gui/Components/: Buttons.h  UserInput.h  VolumeControl.cpp  VolumeControl.h
src/gui/Forms/: CMakeLists.txt  CallbackBox.h  ModLoopChanger.cpp  ModLoopChanger.h  NumberCallbackBox.h
src/gui/Forms/CallbackBoxes/: NumberControl.h  NumberEditBox.h  NumberOverrideBox.h  TextEditBox.cpp  TextEditBox.h  TextOverrideBox.cpp  TextOverrideBox.h
src/gui/Forms/Validators/: OptionalIntegerValidator.h
src/gui/Panels/: EditPanel.cpp  EditPanel.h  FileDetailsPanel.h  FileFilters.cpp  FileFilters.h  FilePanel.cpp  FilePanel.h  OverrideEditor.cpp  OverrideEditor.h
src/gui/Popups/: ModSettingsPopup.cpp  ModSettingsPopup.h
src/mod_manager/: Mod.cpp  Mod.h  ModManager.cpp  ModManager.h  ModObserver.cpp  ModObserver.h
src/mod_manager/Overrides/: Override.h  SD9Override.cpp  SD9Override.h
tests/: CMakeLists.txt  test_directory.cpp  test_mod.cpp  test_sd9info.cpp
